- improved allow to remove all but the main file from a running project
- improved when closing a tab focus other tab from the project if available
- removed warning when deleting a project file that does not exist
- fixed usage of license file specified via the `gamsconfig.yaml`
- added workspace clean-up during Studio start based on filters defined via the settings
- fixed find GAMS on Windows

Version 1.18.7
==================
- added line wrapping for changelog
- fixed license dialog layout on resize
- fixed jumpy font when editing italic lines
- fixed selection invisible in system log
- fixed wrong behavior of `-GAMS-System-` project

Version 1.18.6
==================
- added highlighting of group names for all running projects
- added function to "Save as..." for the project options file
- added licensed GAMS solvers to license text and dropped solver matrix
- added support for fetching a GAMS license by using a access code
- fixed usage of license file specified via the `gamsconfig.yaml`
- fixed crash after "Save as..." of the changelog
- fixed color theme issue when Windows is in dark mode and Studio is using light mode
- fixed incorrect entry count shown by model library tabs when using filters
- fixed crash on reloading a LST file
- fixed update editors after changes in settings dialog

Version 1.18.5
==================
- added command line argument to log C4U information and errors (`--dump-c4u-data`)
- fixed missing spaces in breakpoint context menu text
- fixed GDX export dialog non-modal on macOS
- fixed fullscreen mode on Windows
- fixed help to documentation triggered from Connect Editor, EFI Editor, Parameter File Editor and Solver Option Editor

Version 1.18.4
==================
- fixed incomplete search results when searching in `This Project`
- fixed incomplete selection in LST file when using the scroll action
- fixed wrong behavior on overwriting a file loaded via the welcome page or the model library